# dreamcraft

./: .gitignore  README.md  main.py  pyproject.toml  test.ipynb  translate.py  论文初稿(修改).md  论文初稿-原件.md
.cache/: credentials.json
lib/mineflayer/: index.js  package-lock.json
src/: __init__.py  constants.py
src/dreamcraft/: bridge.py  config.py  container.py  dreamcraft.py
src/dreamcraft/app/: __init__.py  protocols.py
src/dreamcraft/domain/: __init__.py  goal_models.py  observation.py  quest.py  skill.py  skill_models.py  snapshot.py  snapshot_models.py  waypoint.py  wiki.py  wiki_document.py  wiki_models.py
src/dreamcraft/infra/: __init__.py
src/dreamcraft/interface/: tool_repo.py
src/dreamcraft/prompts/: context_compression.md  expand_path_query.md  expand_path_role.md  feasibility_check_query copy.md  feasibility_check_query.md  feasibility_check_query.txt  feasibility_check_role.md  generate_code_query.md  generate_code_role.md  granularity_check_query.md  granularity_check_role.md  imaginate_query copy.md  imaginate_query.md  imaginate_query.txt  imaginate_role.txt  navigate_query copy 2.md  navigate_query copy.md  navigate_query.md  navigate_role.md  prompt_enum.py  query_check.txt  react.md  react.txt  role_check.txt  test_react.txt  test_react_micro.txt  test_react_micro_step.txt  verify_query.md  verify_role.md
src/dreamcraft/utils/: __init__.py  grep.py  minecraft_launcher.py  print_helper copy.py  (+3 more)
src/mineflayer_server/: index.js  package-lock.json  package.json  test.js
论文/: 论文初稿(修改).md  论文初稿.md  论文初稿.txt  降ai.md  降ai_副本.md  降ai后.md
(+56 files in other folders)
