[project]
name = "dreamcraft"
version = "0.1.0"
description = ""
authors = [
    {name = "echorgi",email = "echorginefu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium (>=1.2.3,<2.0.0)",
    "psutil (>=7.2.2,<8.0.0)",
    "minecraft-launcher-lib (>=8.0,<9.0)"
]

[tool.poetry]
packages = [{include = "dreamcraft", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
